# zk

./: Cargo.toml
arithmetic_circuit/: Cargo.toml
arithmetic_circuit/src/: circuit.rs
fft/src/: fft.rs
fiat_shamir/: Cargo.toml
fiat_shamir/src/: transcript.rs
fri/: Cargo.toml
fri/src/: lib.rs  merkle.rs  protocol.rs  prover.rs  utils.rs  verifier.rs
gkr/: Cargo.toml
gkr/src/: gkr_protocol.rs  lib.rs  prover.rs  utils.rs  verifier.rs
kzg/: Cargo.toml
kzg/src/multilinear/: kzg_protocol.rs  mod.rs  multilinear_kzg.rs  prover.rs  trusted_setup.rs  utils.rs  verifier.rs
polynomials/: Cargo.toml
polynomials/src/: lib.rs  product_polynomial.rs  sum_polynomial.rs
polynomials/src/multilinear_polynomial/: evaluation_form.rs  mod.rs
polynomials/src/univariate_polynomial/: dense_coefficient_form.rs  mod.rs
shamir/: Cargo.toml
shamir/src/: shamir_protocol.rs  shamir_protocol_at_zero.rs
src/: fft.rs  lib.rs  main.rs  multilinear_polynomial.rs  shamier_protocol.rs  univariate_polynomial.rs
src/concepts_protocols/: fft.rs  mod.rs  shamier_protocol.rs  shamier_protocol_at_zero.rs  sumcheck_protocol.rs
src/concepts_protocols/arithmetic_circuit/: circuit.rs
src/concepts_protocols/arithmetic_gate/: circuit.rs  gate.rs
src/concepts_protocols/fiat_shamier/: transcript.rs
src/concepts_protocols/fiat_shamir/: transcript.rs
src/polynomials/: mod.rs  multilinear_polynomial.rs  product_polynomial.rs  sum_polynomial.rs  univariate_polynomial.rs
sumcheck/: Cargo.toml
sumcheck/src/: lib.rs  prover.rs  sumcheck_protocol.rs  verifier.rs
(+14 files in other folders)
